# skills

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  llms.tmpl.txt  llms.txt  package-lock.json  package.json
.claude-plugin/: marketplace.json  marketplace.schema.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-skill.yml
.github/plugin/: marketplace.json  marketplace.schema.json
.github/workflows/: auto-patch.yml  bump-version.yml  cli-runners.yml  deploy-pages.yml  lint.yml  publish.yml  skill-pr-autogen.yml  skill-pr.yml  skill-submission.yml
copilot-cli/: package.json
docs/: best-practices.md  contributing.md  integration-status.md  skillops-landscape.md
plugins/stuffbucket/: .mcp.json  plugin.json
plugins/stuffbucket-tools/: .mcp.json
plugins/stuffbucket/skills/tauri-setup-scaffolding/templates/: Cargo.toml  lib.rs  tauri.conf.minimal.json
scripts/: build-readme.js  bump-version.js  check-versions.js  setup-links.js
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: build-semantic-index.js  sync-skills.js
site/src/: content.config.ts
skills/example-skill/: SKILL.md
spec/: agent-skills-spec.md
template/: SKILL.md
tests/: test-mcp-launch-command.js  test-plugin-structure.js
tests/runners/: .gitignore  Dockerfile.claude  Dockerfile.copilot  README.md  claude-runner.sh  codex-runner.sh  lib.sh  run.sh  (+2 more)
(+423 files in other folders)
